<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".IdentifyCarMakeActivity">

    <ImageView
        android:id="@+id/random_image_view"
        android:layout_width="284dp"
        android:layout_height="212dp"
        android:layout_margin="10dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/Identify_car_make_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_image_title" />

    <Button
        android:id="@+id/identify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="identifyImage"
        android:tag=""
        android:text="@string/identify_image"
        android:backgroundTint="@color/Gold"
        android:textColor="@color/black"
        tools:targetApi="lollipop"
        android:fontFamily="@font/nunito_sans_extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_make_spinner" />

    <Spinner
        android:id="@+id/car_make_spinner"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:entries="@array/car_makes"
        android:background="@drawable/background_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_btn" />

    <TextView
        android:id="@+id/question_btn"
        android:layout_width="342dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/car_mark_submit_answer"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_image_view" />

    <TextView
        android:id="@+id/correct_car_make_text"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_button" />

    <TextView
        android:id="@+id/identify_image_title"
        android:layout_width="304dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/halant_medium"
        android:gravity="center_horizontal"
        android:text="@string/identify_car_make_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint_timer"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_button" />


</androidx.constraintlayout.widget.ConstraintLayout>