<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".HintActivity">

    <ImageView
        android:id="@+id/hint_image_view"
        android:layout_width="284dp"
        android:layout_height="212dp"
        android:layout_margin="10dp"

        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_title"
        android:contentDescription="@string/hint_image" />

    <TextView
        android:id="@+id/submit_text"
        android:layout_width="385dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/halant_medium"
        android:gravity="center_horizontal"
        android:text="@string/hint_type_letter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_image_view" />

    <TextView
        android:id="@+id/dash_text_view"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/halant_medium"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    <EditText
        android:id="@+id/hint_answer"
        android:layout_width="234dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="@font/halant_medium"
        android:inputType="textPersonName"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_text"
        tools:ignore="LabelFor"
         />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/Gold"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:onClick="submitGuess"
        android:tag=""
        android:text="@string/submit_letter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_answer"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/hint_title"
        android:layout_width="198dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/halant_medium"
        android:gravity="center_horizontal"
        android:text="@string/hint_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint_timer"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/halant_medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash_text_view" />

    <TextView
        android:id="@+id/hint_correct_name_text"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/halant_medium"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>